5 of 5 stages completed

--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -30,3 +30,6 @@ content:
 - Shorthands
 - Methods and attributes
 - Regexp quantifiers
+- Custom generators
+- ast module
+- How to read the documentation
