--- a/Static Code Analyzer/Analyze arguments and variables/task-info.yaml
+++ b/Static Code Analyzer/Analyze arguments and variables/task-info.yaml
@@ -336,6 +336,13 @@ files:
 
     if __name__ == '__main__':    AnalyzerTest("analyzer.code_analyzer").run_tests()
   learner_created: false
+- name: analyzer/linters.py
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/9907#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Mon, 07 Aug 2023 07:52:16 UTC"
 record: -1
