--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/24956/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Tue, 01 Aug 2023 07:17:02 UTC"
+update_date: "Mon, 07 Aug 2023 07:36:13 UTC"
 stages:
 - id: 609
   step: 9903
@@ -19,7 +19,7 @@ stages:
   is_completed: true
 - id: 613
   step: 9907
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: IDE
@@ -60,28 +60,28 @@ topics:
     theory_id: 5913
   - title: Naming variables
     theory_id: 5885
+  - title: Introduction to OOP
+    theory_id: 3614
   - title: Program with numbers
     theory_id: 5872
   - title: If statement
     theory_id: 5953
   - title: Else statement
     theory_id: 5932
-  - title: Introduction to OOP
-    theory_id: 3614
   - title: Class
     theory_id: 6661
   - title: Class instances
     theory_id: 6669
+  - title: Pip
+    theory_id: 6230
+  - title: Virtual Environment
+    theory_id: 13923
   - title: Methods
     theory_id: 6931
   - title: Methods and attributes
     theory_id: 6981
   - title: Magic methods
     theory_id: 7139
-  - title: Pip
-    theory_id: 6230
-  - title: Virtual Environment
-    theory_id: 13923
   - title: For loop
     theory_id: 6065
   - title: While loop
@@ -116,12 +116,12 @@ topics:
     theory_id: 10217
   - title: Assert statement
     theory_id: 10372
+  - title: Intro to computational thinking
+    theory_id: 8742
   - title: Introduction to Linux
     theory_id: 9526
   - title: File modes and permissions
     theory_id: 13953
-  - title: Intro to computational thinking
-    theory_id: 8742
   - title: Files in Python
     theory_id: 8691
   - title: Reading files
@@ -148,10 +148,10 @@ topics:
     theory_id: 5814
   - title: String formatting
     theory_id: 6037
-  - title: Basic string methods
-    theory_id: 6842
   - title: Escape sequences
     theory_id: 7130
+  - title: Basic string methods
+    theory_id: 6842
   - title: Split and join
     theory_id: 6972
   1:
@@ -161,20 +161,20 @@ topics:
     theory_id: 19163
   - title: Iterators
     theory_id: 8479
-  - title: Ordering and total order
-    theory_id: 9253
   - title: Components of computational thinking
     theory_id: 8745
-  - title: Arguments
-    theory_id: 7248
+  - title: Ordering and total order
+    theory_id: 9253
   - title: Indexes
     theory_id: 6189
   - title: Identity testing
     theory_id: 8077
-  - title: Operations with list
-    theory_id: 6031
   - title: Objects in Python
     theory_id: 9262
+  - title: Arguments
+    theory_id: 7248
+  - title: Operations with list
+    theory_id: 6031
   - title: Default arguments
     theory_id: 10295
   - title: Dictionary
@@ -195,10 +195,10 @@ topics:
     theory_id: 7092
   - title: Slicing
     theory_id: 6177
-  - title: Sorting a list
-    theory_id: 10059
   - title: Functional decomposition
     theory_id: 9571
+  - title: Sorting a list
+    theory_id: 10059
   2:
   - title: What is a bug
     theory_id: 5504
